include/bindings.h

struct fd_set {
  __fd_mask __fds_bits[16];
};
struct timeval {
  __time_t tv_sec;
  __suseconds_t tv_usec;
};
struct timespec {
  __time_t tv_sec;
  __syscall_slong_t tv_nsec;
};
struct __sigset_t {
  unsigned long __val[16];
};
extern int select(int __nfds,
                  fd_set *__readfds,
                  fd_set *__writefds,
                  fd_set *__exceptfds,
                  timeval *__timeout);
extern int pselect(int __nfds,
                   fd_set *__readfds,
                   fd_set *__writefds,
                   fd_set *__exceptfds,
                   const timespec *__timeout,
                   const __sigset_t *__sigmask);